# etl_petrobras

./: docker-compose.yaml  main.py  pagina.html  pyproject.toml
dags/: petrobras_dag.py
notebook/: analysis.ipynb
src/: extract.py  load_data.py  precos_combustiveis.parquet  transform.py
